objects/ELV_ServerDeploymentUsagePeriod__c/ELV_ServerDeploymentUsagePeriod__c.object-meta.xml
<CustomObject>
    <label>Server Deployment Usage Period</label>
    <nameField>
        <displayFormat>UP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Server Deployment Usage Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>