objects/ELV_ServerDeploymentUsagePeriod__c/fields/ELV_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>ELV_Entitlement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Entitlement</label>
    <referenceTo>Ruby__Entitlement__c</referenceTo>
    <relationshipLabel>Entitlements</relationshipLabel>
    <relationshipName>ELV_ServerDeploymentUsagePeriods</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>