objects/ELV_ServerDeploymentUsagePeriod__c/fields/ELV_Status__c.field-meta.xml
<CustomField>
    <fullName>ELV_Status__c</fullName>
    <description>Current Status Active or Cancelled</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>